update seting json

--- a/Hao_Hao/Hao_Hao/appsettings.json
+++ b/Hao_Hao/Hao_Hao/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=SQL1003.site4now.net;Initial Catalog=db_ab6f37_haohao;User Id=db_ab6f37_haohao_admin;Password=!V4-UWE5iB.!-eL"
+        "DefaultConnection": "Data Source=VANNHAT;Initial Catalog=HieuThuocHaoHao;Persist Security Info=True;User ID=sa;Password=123;Encrypt=True;Trust Server Certificate=True"
     },
     "EnvironmentName": "Production",
     "Jwt": {
